--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/svelte": "^7.0.5",
     "astro": "^5.4.2",
     "bootstrap": "^5.3.3",
     "sass": "^1.85.1"
